2006-08-11 Added scale free Ellipse patch for Agg - CM

2006-08-10 Added converters to and from julian dates to matplotlib.dates
           (num2julian and julian2num) - JDH

2006-08-08 Fixed widget locking so multiple widgets could share the
           event handling - JDH

2006-08-07 Added scale free Ellipse patch to SVG and PS - CM

2006-08-05 Re-organized imports in numerix for numpy 1.0b2 -- TEO

2006-08-04 Added draw_markers to PDF backend. - JKS

2006-08-01 Fixed a bug in postscript's rendering of dashed lines - DSD

2006-08-01 figure.py: savefig() update docstring to add support for 'format'
           argument.
           backend_cairo.py: print_figure() add support 'format' argument. - SC

2006-07-31 Don't let postscript's xpdf distiller compress images - DSD

2006-07-31 Added shallowcopy() methods to all Transformations;
           removed copy_bbox_transform and copy_bbox_transform_shallow
           from transforms.py;
           added offset_copy() function to transforms.py to
           facilitate positioning artists with offsets.
           See examples/transoffset.py. - EF

2006-07-31 Don't let postscript's xpdf distiller compress images - DSD

2006-07-29 Fixed numerix polygon bug reported by Nick Fotopoulos.
           Added inverse_numerix_xy() transform method.
           Made autoscale_view() preserve axis direction
           (e.g., increasing down).- EF

2006-07-28 Added shallow bbox copy routine for transforms -- mainly
           useful for copying transforms to apply offset to. - JDH

2006-07-28 Added resize method to FigureManager class
           for Qt and Gtk backend - CM

2006-07-28 Added subplots_adjust button to Qt backend - CM

2006-07-26 Use numerix more in collections.
           Quiver now handles masked arrays. - EF

2006-07-22 Fixed bug #1209354 - DSD

2006-07-22 make scatter() work with the kwarg "color". Closes bug
           1285750 - DSD

2006-07-20 backend_cairo.py: require pycairo 1.2.0.